deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mimic
  name: mimic
  namespace: mimic
spec:
  ports:
  - name: api
    port: 8443
    protocol: TCP
    targetPort: api
  selector:
    app: mimic
