deploy/manifests/mutatingwebhookconfiguration-cabundle.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mimic
  labels:
    app: mimic
webhooks:
- name: mimic.cryptkcoding.com
  clientConfig:
    service:
      name: mimic
      namespace: mimic
      path: "/mutate"
      port: 8443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1EVXdNekF5TURZMU1Wb1hEVE14TURVd01UQXlNRFkxTVZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTjQ3ClNwNnA2UWduZjFVSmlKUkMzcitKMEFIbjR3RnllelQzMDZ6Z0I1azdSOWZhMDkwUExqVVNNR0lOQ01XazhzK0gKLzhzaVBHT2RUcnlyUGFGcE15bUMzNjljaHJkSkVhNC94Zlg3ZlJURGMvdFJvVm9mQW5JWmUxc3JwaHRvVnRoVApPbXVnSzRIT3Bmcm [...]
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  admissionReviewVersions: ["v1"]
  failurePolicy: Ignore
  sideEffects: None
